Update CMake and Compiling Options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,32 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.9)
 project(LibQPEP)
 
-#set(CMAKE_CXX_COMPILER g++-10)
-
 set(CMAKE_BUILD_TYPE "Debug")
+message("Compiler version is: ${CMAKE_SYSTEM_VERSION}")
+message("System version is: ${CMAKE_SYSTEM_NAME}")
+
+if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
+    set(CMAKE_CXX_COMPILER clang++)
+    set(CMAKE_C_COMPILER clang)
+    if("${CMAKE_SYSTEM_VERSION}" LESS_EQUAL "13.4.0")
+        set(OSX_10_9 True)
+    endif()
+endif()
+
+if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
+    set(CMAKE_CXX_COMPILER g++-8)
+    set(CMAKE_C_COMPILER gcc-8)
+endif()
+
 
 if(APPLE)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
-elseif(LINUX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -fopenmp -pthread")
+    if(OSX_10_9)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread")
+    else()
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
+    endif()
+elseif(UNIX)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -fopenmp -pthread -lpthread -lrt -lm -lz -lomp -llapack -lblas")
 endif()
 
 set(CMAKE_CXX_STANDARD 11)
@@ -19,8 +37,17 @@ find_package(LAPACK)
 include_directories(${EIGEN3_INCLUDE_DIR} ./csdp/include)
 
 if(OpenCV_FOUND)
-    include_directories(${OpenCV_INCLUDE_DIRS})
-    add_definitions(-D USE_OPENCV)
+    if("${OpenCV_VERSION}" GREATER_EQUAL "4")
+        include_directories(${OpenCV_INCLUDE_DIRS})
+        add_definitions(-D USE_OPENCV)
+        add_definitions(-D USE_OPENCV4)
+    elseif("${OpenCV_VERSION}" GREATER_EQUAL "3")
+            include_directories(${OpenCV_INCLUDE_DIRS})
+            add_definitions(-D USE_OPENCV)
+            add_definitions(-D USE_OPENCV3)
+    else()
+        message(FATAL_ERROR "OpenCV Version: ${OPENCV_VERSION} is Too Old for This Project!")
+    endif()
 endif()
 
 if(LAPACK_FOUND)
@@ -28,20 +55,49 @@ if(LAPACK_FOUND)
 endif()
 
 add_definitions(-D BIT64)
-add_definitions(-D USEOPENMP)
-add_definitions(-D SETNUMTHREADS)
-add_definitions(-D USESIGTERM)
-add_definitions(-D USEGETTIME)
-add_definitions(-D CAPSLAPACK)
+if(NOT OSX_10_9)
+    add_definitions(-D USEOPENMP)
+    add_definitions(-D SETNUMTHREADS)
+    add_definitions(-D USESIGTERM)
+    add_definitions(-D USEGETTIME)
+endif()
+
+if(NOT UNIX)
+    add_definitions(-D CAPSLAPACK)
+endif()
 
 set(OMP_LIB "")
-if(APPLE OR LINUX)
+if(APPLE)
     if(EXISTS /usr/local/lib/libomp.a)
         set(OMP_LIB /usr/local/lib/libomp.a)
+    elseif(EXISTS /usr/local/lib/libomp.dylib)
+        set(OMP_LIB /usr/local/lib/libomp.dylib)
+    elseif(EXISTS /opt/local/lib/libomp.a)
+        set(OMP_LIB /opt/local/lib/libomp.a)
+        include_directories(/opt/local/include /opt/local/include/libomp)
+    elseif(EXISTS /opt/local/lib/libomp.dylib)
+        set(OMP_LIB /opt/local/lib/libomp.dylib)
+        include_directories(/opt/local/include /opt/local/include/libomp)
     elseif(EXISTS /usr/lib/libomp.a)
         set(OMP_LIB /usr/lib/libomp.a)
+    elseif(EXISTS /usr/lib/libomp.dylib)
+        set(OMP_LIB /usr/lib/libomp.dylib)
     else()
         message(FATAL_ERROR "No OpenMP Library Found!")
+    endif()
+else()
+    if(UNIX)
+        if(EXISTS /usr/lib/x86_64-linux-gnu/liblapack.a)
+            set(OMP_LIB /usr/lib/x86_64-linux-gnu/liblapack.a)
+        elseif(EXISTS /usr/lib/libomp.a)
+            set(OMP_LIB /usr/lib/libomp.a)
+        elseif(EXISTS /usr/local/lib/libomp.a)
+            set(OMP_LIB /usr/local/lib/libomp.a)
+        elseif(EXISTS /usr/local/lib/libomp/libomp.a)
+            set(OMP_LIB /usr/local/lib/libomp/libomp.a)
+        else()
+            message(FATAL_ERROR "No OpenMP Library Found!")
+        endif()
     endif()
 endif()
 
@@ -114,7 +170,9 @@ add_executable(LibQPEP
         ./csdp/lib/matvec.c
         ./csdp/lib/psd_feas.c
         ./csdp/lib/sortentries.c
-        ./csdp/lib/writesol.c CovEstimation.cpp CovEstimation.h)
+        ./csdp/lib/writesol.c
+        CovEstimation.cpp
+        CovEstimation.h)
 
 target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES})
 
