--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ endif()
 if(APPLE)
     if(OSX_10_9)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread")
+        message("Operating system is Mac OS X 10.9 or below, disabling OpenMP")
     else()
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
     endif()
@@ -36,18 +37,21 @@ set(CMAKE_CXX_STANDARD 11)
 find_package(Eigen3 REQUIRED)
 find_package(OpenCV)
 find_package(LAPACK)
+find_package(X11)
 
 include_directories(${EIGEN3_INCLUDE_DIR} ./csdp/include)
 
 if(OpenCV_FOUND)
+    include_directories(${X11_INCLUDE_DIR})
+
     if("${OpenCV_VERSION}" GREATER_EQUAL "4")
         include_directories(${OpenCV_INCLUDE_DIRS})
         add_definitions(-D USE_OPENCV)
         add_definitions(-D USE_OPENCV4)
     elseif("${OpenCV_VERSION}" GREATER_EQUAL "3")
-            include_directories(${OpenCV_INCLUDE_DIRS})
-            add_definitions(-D USE_OPENCV)
-            add_definitions(-D USE_OPENCV3)
+        include_directories(${OpenCV_INCLUDE_DIRS})
+        add_definitions(-D USE_OPENCV)
+        add_definitions(-D USE_OPENCV3)
     else()
         message(FATAL_ERROR "OpenCV Version: ${OPENCV_VERSION} is Too Old for This Project!")
     endif()
@@ -177,5 +181,5 @@ add_executable(LibQPEP
         CovEstimation.cpp
         CovEstimation.h)
 
-target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES})
+target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES})
 
