Significantly improves the computational efficiency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,22 @@
-cmake_minimum_required(VERSION 3.9)
+cmake_minimum_required(VERSION 3.6)
 project(LibQPEP)
 
-set(CMAKE_BUILD_TYPE "Debug")
 message("Compiler version is: ${CMAKE_SYSTEM_VERSION}")
 message("System version is: ${CMAKE_SYSTEM_NAME}")
 
 if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     set(CMAKE_CXX_COMPILER clang++)
     set(CMAKE_C_COMPILER clang)
-    if("${CMAKE_SYSTEM_VERSION}" LESS_EQUAL "13.4.0")
+    add_definitions(-D COMPILER_CLANG)
+    if("${CMAKE_SYSTEM_VERSION}" GREATER "13.4.0")
+        message("Detected Mac OS X")
+        set(OSX True)
+    else()
+        message("Detected old Mac OS X system, while 10.9 is the lowest version supported")
         set(OSX_10_9 True)
+        add_definitions(-D NO_OMP)
     endif()
-endif()
 
-if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
-    set(CMAKE_CXX_COMPILER g++-8)
-    set(CMAKE_C_COMPILER gcc-8)
-    set(LINUX_OS True)
-endif()
-
-
-if(APPLE)
     if(OSX_10_9)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread")
         message("Operating system is Mac OS X 10.9 or below, disabling OpenMP")
@@ -29,15 +25,33 @@ if(APPLE)
     endif()
 endif()
 
+if(${CMAKE_COMPILER_IS_GNUCC} OR ${CMAKE_COMPILER_IS_GNUCXX})
+    add_definitions(-D COMPILER_GCC)
+endif()
+
+if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
+#    set(CMAKE_CXX_COMPILER g++-8)
+#    set(CMAKE_C_COMPILER gcc-8)
+    set(LINUX_OS True)
+endif()
+
 if(LINUX_OS)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -fopenmp -pthread -lpthread -lrt -lm -lz -lomp -llapack -lblas")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz")
+    add_definitions(-D NO_OMP)
 endif()
 
 set(CMAKE_CXX_STANDARD 11)
 find_package(Eigen3 REQUIRED)
 find_package(OpenCV)
-find_package(LAPACK)
+find_package(BLAS REQUIRED)
+find_package(LAPACK REQUIRED)
 find_package(X11)
+
+if(SUPERLU)
+    find_package(superlu)
+    add_definitions(-DUSE_SUPERLU)
+    message("Using SuperLU for Acceleration of Linear System Solving")
+endif()
 
 include_directories(${EIGEN3_INCLUDE_DIR} ./csdp/include)
 
@@ -62,19 +76,18 @@ if(LAPACK_FOUND)
 endif()
 
 add_definitions(-D BIT64)
-if(NOT OSX_10_9)
+if(NOT OSX_10_9 AND NOT LINUX_OS)
     add_definitions(-D USEOPENMP)
     add_definitions(-D SETNUMTHREADS)
     add_definitions(-D USESIGTERM)
     add_definitions(-D USEGETTIME)
 endif()
 
-if(NOT UNIX)
-    add_definitions(-D CAPSLAPACK)
+if(NOT LINUX_OS)
+add_definitions(-D CAPSLAPACK)
 endif()
 
-set(OMP_LIB "")
-if(APPLE)
+if(OSX)
     if(EXISTS /usr/local/lib/libomp.a)
         set(OMP_LIB /usr/local/lib/libomp.a)
     elseif(EXISTS /usr/local/lib/libomp.dylib)
@@ -90,22 +103,9 @@ if(APPLE)
     elseif(EXISTS /usr/lib/libomp.dylib)
         set(OMP_LIB /usr/lib/libomp.dylib)
     else()
-        message(FATAL_ERROR "No OpenMP Library Found!")
+        message(FATAL_ERROR "Mac OS Detected but No OpenMP Library Found!")
     endif()
 else()
-    if(UNIX)
-        if(EXISTS /usr/lib/x86_64-linux-gnu/liblapack.a)
-            set(OMP_LIB /usr/lib/x86_64-linux-gnu/liblapack.a)
-        elseif(EXISTS /usr/lib/libomp.a)
-            set(OMP_LIB /usr/lib/libomp.a)
-        elseif(EXISTS /usr/local/lib/libomp.a)
-            set(OMP_LIB /usr/local/lib/libomp.a)
-        elseif(EXISTS /usr/local/lib/libomp/libomp.a)
-            set(OMP_LIB /usr/local/lib/libomp/libomp.a)
-        else()
-            message(FATAL_ERROR "No OpenMP Library Found!")
-        endif()
-    endif()
 endif()
 
 
@@ -181,5 +181,9 @@ add_executable(LibQPEP
         CovEstimation.cpp
         CovEstimation.h)
 
-target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES})
+if(NOT LINUX)
+    target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES})
+else()
+    target_link_libraries(LibQPEP ${OpenCV_LIBS} /usr/lib/gcc/x86_64-linux-gnu/7/libgfortran.a /usr/lib/gcc/x86_64-linux-gnu/7/libquadmath.a)
+endif()
 
