--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,17 +8,19 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     set(CMAKE_CXX_COMPILER clang++)
     set(CMAKE_C_COMPILER clang)
     add_definitions(-D COMPILER_CLANG)
-    if("${CMAKE_SYSTEM_VERSION}" GREATER "13.4.0")
+    if("${CMAKE_SYSTEM_VERSION}" GREATER "15.6.0")
         message("Detected Mac OS X")
         set(OSX True)
     else()
-        message("Detected old Mac OS X system, while 10.9 is the lowest version supported")
+        message("Detected old Mac OS X system, while 10.7 is the lowest version supported")
         set(OSX_10_9 True)
         add_definitions(-D NO_OMP)
     endif()
 
     if(OSX_10_9)
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread")
+        add_definitions(-D OSX_10_9)
+        set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -stdlib=libc++")
         message("Operating system is Mac OS X 10.9 or below, disabling OpenMP")
     else()
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
@@ -67,7 +69,7 @@ if(OpenCV_FOUND)
         add_definitions(-D USE_OPENCV)
         add_definitions(-D USE_OPENCV3)
     else()
-        message(FATAL_ERROR "OpenCV Version: ${OPENCV_VERSION} is Too Old for This Project!")
+        message(FATAL_ERROR "OpenCV Version: ${OPENCV_VERSION} is too old for this project!")
     endif()
 endif()
 
