--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,12 @@ endif()
 if(LINUX_OS)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz")
     add_definitions(-D NO_OMP)
+    include_directories(/opt/intel/mkl/include /opt/intel/oneapi/mkl/latest/include)
+    link_directories(
+    	/opt/intel/mkl/lib/intel64 
+    	/opt/intel/lib/intel64
+    	/opt/intel/oneapi/mkl/latest/lib/intel64
+    	/opt/intel/oneapi/intelpython/python3.7/lib/)
 endif()
 
 set(CMAKE_CXX_STANDARD 11)
@@ -183,9 +189,9 @@ add_executable(LibQPEP
         CovEstimation.cpp
         CovEstimation.h)
 
-if(NOT LINUX)
+if(NOT LINUX_OS)
     target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES})
 else()
-    target_link_libraries(LibQPEP ${OpenCV_LIBS} /usr/lib/gcc/x86_64-linux-gnu/7/libgfortran.a /usr/lib/gcc/x86_64-linux-gnu/7/libquadmath.a)
+    target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES} mkl_gf_lp64 mkl_intel_thread mkl_gnu_thread mkl_blas95_lp64 mkl_intel_lp64 mkl_sequential mkl_core pthread iomp5 X11)
 endif()
 
