--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,24 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     set(CMAKE_CXX_COMPILER clang++)
     set(CMAKE_C_COMPILER clang)
     add_definitions(-D COMPILER_CLANG)
-    if("${CMAKE_SYSTEM_VERSION}" GREATER "15.6.0")
+
+    if("${CMAKE_SYSTEM_VERSION}" GREATER "20.0.0")
+        message("Using OS X Big Sur")
+        set(OSX_BIGSUR True)
+    elseif("${CMAKE_SYSTEM_VERSION}" GREATER "15.6.0" AND "${CMAKE_SYSTEM_VERSION}" LESS "20.0.0")
         message("Detected Mac OS X")
         set(OSX True)
     else()
         message("Detected old Mac OS X system, while 10.7 is the lowest version supported")
         set(OSX_10_9 True)
-        add_definitions(-D NO_OMP)
     endif()
 
-    if(OSX_10_9)
+    if(OSX_BIGSUR)
+        add_definitions(-D OSX_BIG_SUR)
+        set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
+    elseif(OSX_10_9)
+        add_definitions(-D NO_OMP)
         add_definitions(-D OSX_10_9)
         set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -stdlib=libc++")
@@ -95,7 +103,7 @@ if(NOT LINUX_OS)
 add_definitions(-D CAPSLAPACK)
 endif()
 
-if(OSX)
+if(OSX OR OSX_BIGSUR)
     if(EXISTS /usr/local/lib/libomp.a)
         set(OMP_LIB /usr/local/lib/libomp.a)
     elseif(EXISTS /usr/local/lib/libomp.dylib)
