Add Apple M1 Processor Support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(LibQPEP)
 message("Compiler version is: ${CMAKE_SYSTEM_VERSION}")
 message("System version is: ${CMAKE_SYSTEM_NAME}")
 message("Architecture is: ${CMAKE_SYSTEM_PROCESSOR}")
+set(NO_OPENMP FALSE)
 
 if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     set(CMAKE_CXX_COMPILER clang++)
@@ -23,11 +24,15 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
 
     if(OSX_BIGSUR)
         add_definitions(-D OSX_BIG_SUR)
+	set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
 	if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm64")
+		message("Using Apple M1 processors, disabling OpenMP")
 		add_definitions(-D NO_OMP)
+		set(NO_OPENMP TRUE)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
+	else()
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
 	endif()
-        set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
     elseif(OSX_10_9)
         add_definitions(-D NO_OMP)
         add_definitions(-D OSX_10_9)
@@ -96,7 +101,7 @@ if(LAPACK_FOUND)
 endif()
 
 add_definitions(-D BIT64)
-if(NOT OSX_10_9 AND NOT LINUX_OS)
+if(NOT OSX_10_9 AND NOT LINUX_OS AND NOT NO_OPENMP)
     add_definitions(-D USEOPENMP)
     add_definitions(-D SETNUMTHREADS)
     add_definitions(-D USESIGTERM)
@@ -108,22 +113,24 @@ add_definitions(-D CAPSLAPACK)
 endif()
 
 if(OSX OR OSX_BIGSUR)
-    if(EXISTS /usr/local/lib/libomp.a)
-        set(OMP_LIB /usr/local/lib/libomp.a)
-    elseif(EXISTS /usr/local/lib/libomp.dylib)
-        set(OMP_LIB /usr/local/lib/libomp.dylib)
-    elseif(EXISTS /opt/local/lib/libomp.a)
-        set(OMP_LIB /opt/local/lib/libomp.a)
-        include_directories(/opt/local/include /opt/local/include/libomp)
-    elseif(EXISTS /opt/local/lib/libomp.dylib)
-        set(OMP_LIB /opt/local/lib/libomp.dylib)
-        include_directories(/opt/local/include /opt/local/include/libomp)
-    elseif(EXISTS /usr/lib/libomp.a)
-        set(OMP_LIB /usr/lib/libomp.a)
-    elseif(EXISTS /usr/lib/libomp.dylib)
-        set(OMP_LIB /usr/lib/libomp.dylib)
-    else()
-        message(FATAL_ERROR "Mac OS Detected but No OpenMP Library Found!")
+    if(NOT NO_OPENMP)
+	if(EXISTS /usr/local/lib/libomp.a)
+        		set(OMP_LIB /usr/local/lib/libomp.a)
+    	elseif(EXISTS /usr/local/lib/libomp.dylib)
+        		set(OMP_LIB /usr/local/lib/libomp.dylib)
+    	elseif(EXISTS /opt/local/lib/libomp.a)
+        		set(OMP_LIB /opt/local/lib/libomp.a)
+        		include_directories(/opt/local/include /opt/local/include/libomp)
+    	elseif(EXISTS /opt/local/lib/libomp.dylib)
+        		set(OMP_LIB /opt/local/lib/libomp.dylib)
+        		include_directories(/opt/local/include /opt/local/include/libomp)
+    	elseif(EXISTS /usr/lib/libomp.a)
+        		set(OMP_LIB /usr/lib/libomp.a)
+    	elseif(EXISTS /usr/lib/libomp.dylib)
+        		set(OMP_LIB /usr/lib/libomp.dylib)
+    	else()
+        		message(FATAL_ERROR "Mac OS Detected but No OpenMP Library Found!")
+    	endif()	
     endif()
 else()
     find_package(OpenMP REQUIRED)
