--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,10 +111,10 @@ endif()
 if(NOT LINUX_OS)
 add_definitions(-D CAPSLAPACK)
 endif()
-
+find_package(OpenMP REQUIRED)
 if(OSX OR OSX_BIGSUR)
     if(NOT NO_OPENMP)
-	if(EXISTS /usr/local/lib/libomp.a)
+        if(EXISTS /usr/local/lib/libomp.a)
         		set(OMP_LIB /usr/local/lib/libomp.a)
     	elseif(EXISTS /usr/local/lib/libomp.dylib)
         		set(OMP_LIB /usr/local/lib/libomp.dylib)
@@ -130,7 +130,7 @@ if(OSX OR OSX_BIGSUR)
         		set(OMP_LIB /usr/lib/libomp.dylib)
     	else()
         		message(FATAL_ERROR "Mac OS Detected but No OpenMP Library Found!")
-    	endif()	
+    	endif()
     endif()
 else()
     find_package(OpenMP REQUIRED)
