Specify OpenCV Version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,10 +70,14 @@ endif()
 
 set(CMAKE_CXX_STANDARD 11)
 find_package(Eigen3 REQUIRED)
-find_package(OpenCV)
 find_package(BLAS REQUIRED)
 find_package(LAPACK REQUIRED)
 find_package(X11)
+if(NOT DEFINED OPENCV_VER)
+    find_package(OpenCV)
+else()
+    find_package(OpenCV ${OPENCV_VER} EXACT REQUIRED PATHS ${OPENCV_PATH})
+endif()
 
 if(SUPERLU)
     find_package(superlu)
