Update OpenMP Behaviors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,12 +26,12 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
         add_definitions(-D OSX_BIG_SUR)
 	set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
 	if("${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm64")
-		message("Using Apple M1 processors, disabling OpenMP")
-		add_definitions(-D NO_OMP)
-		set(NO_OPENMP TRUE)
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
+		#message("Using Apple M1 processors, disabling OpenMP")
+		#add_definitions(-D NO_OMP)
+		#set(NO_OPENMP TRUE)
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread")
 	else()
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread")
 	endif()
     elseif(OSX_10_9)
         add_definitions(-D NO_OMP)
@@ -40,7 +40,7 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -stdlib=libc++")
         message("Operating system is Mac OS X 10.9 or below, disabling OpenMP")
     else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -Xclang -fopenmp -pthread")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread")
     endif()
 endif()
 
@@ -121,10 +121,10 @@ endif()
 find_package(OpenMP REQUIRED)
 if(OSX OR OSX_BIGSUR)
     if(NOT NO_OPENMP)
-        if(EXISTS /usr/local/lib/libomp.a)
-        		set(OMP_LIB /usr/local/lib/libomp.a)
-    	elseif(EXISTS /usr/local/lib/libomp.dylib)
+    	if(EXISTS /usr/local/lib/libomp.dylib)
         		set(OMP_LIB /usr/local/lib/libomp.dylib)
+        elseif(EXISTS /usr/local/lib/libomp.a)
+        		set(OMP_LIB /usr/local/lib/libomp.a)
     	elseif(EXISTS /opt/local/lib/libomp.a)
         		set(OMP_LIB /opt/local/lib/libomp.a)
         		include_directories(/opt/local/include /opt/local/include/libomp)
@@ -138,6 +138,7 @@ if(OSX OR OSX_BIGSUR)
     	else()
         		message(FATAL_ERROR "Mac OS Detected but No OpenMP Library Found!")
     	endif()
+         message("OpenMP: ${OMP_LIB}")
     endif()
 else()
     find_package(OpenMP REQUIRED)
@@ -230,8 +231,8 @@ else()
     	target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES} mkl_gf_lp64 mkl_intel_thread mkl_gnu_thread mkl_blas95_lp64 mkl_intel_lp64 mkl_sequential mkl_core pthread iomp5 X11)
     	target_link_libraries(LibQPEP-test LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES} mkl_gf_lp64 mkl_intel_thread mkl_gnu_thread mkl_blas95_lp64 mkl_intel_lp64 mkl_sequential mkl_core pthread iomp5 X11)
     else()
-	target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES} pthread X11)
-    	target_link_libraries(LibQPEP-test LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES} pthread X11)
+	target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES} ${OMP_LIB} pthread X11)
+    	target_link_libraries(LibQPEP-test LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES} ${OMP_LIB} pthread X11)
     endif()
 endif()
 
