Update Stability on Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,11 @@ endif()
 
 if(${CMAKE_COMPILER_IS_GNUCC} OR ${CMAKE_COMPILER_IS_GNUCXX})
     add_definitions(-D COMPILER_GCC)
+    set(USE_CLANG False)
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    add_definitions(-D COMPILER_CLANG)
+    set(USE_CLANG True)
+    message("Using Clang compiler.")
 endif()
 
 if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
@@ -46,9 +51,13 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Linux")
 endif()
 
 if(LINUX_OS)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz")
+    if(NOT USE_CLANG)
+    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz")
+    else()
+    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz")
+    endif()
 
-    if(NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm64")
+    if(NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "armhf" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm64")
     	include_directories(/opt/intel/mkl/include /opt/intel/oneapi/mkl/latest/include)
     	link_directories(
     		/opt/intel/mkl/lib/intel64 
@@ -108,8 +117,9 @@ endif()
 if(NOT LINUX_OS)
 add_definitions(-D CAPSLAPACK)
 endif()
-find_package(OpenMP REQUIRED)
+
 if(OSX OR OSX_BIGSUR)
+    find_package(OpenMP REQUIRED)
     if(NOT NO_OPENMP)
     	if(EXISTS /usr/local/lib/libomp.dylib)
         		set(OMP_LIB /usr/local/lib/libomp.dylib)
@@ -130,7 +140,7 @@ if(OSX OR OSX_BIGSUR)
     	endif()
          message("OpenMP: ${OMP_LIB}")
     endif()
-else()
+elseif(LINUX_OS AND NOT USE_CLANG)
     find_package(OpenMP REQUIRED)
     set(OMP_LIB ${OpenMP_CXX_FLAGS})
 endif()
@@ -217,7 +227,7 @@ if(NOT LINUX_OS)
     target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES})
     target_link_libraries(LibQPEP-test LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES})
 else()
-    if(NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm64")
+    if(NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "armhf" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm64")
     	target_link_libraries(LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES} mkl_gf_lp64 mkl_intel_thread mkl_gnu_thread mkl_blas95_lp64 mkl_intel_lp64 mkl_sequential mkl_core pthread iomp5 X11)
     	target_link_libraries(LibQPEP-test LibQPEP ${OMP_LIB} ${OpenCV_LIBS} ${LAPACK_LIBRARIES} ${X11_LIBRARIES} ${BLAS_LIBRARIES} mkl_gf_lp64 mkl_intel_thread mkl_gnu_thread mkl_blas95_lp64 mkl_intel_lp64 mkl_sequential mkl_core pthread iomp5 X11)
     else()
