Optimize Clang compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     if("${CMAKE_SYSTEM_VERSION}" GREATER "20.0.0")
         message("Using OS X Big Sur")
         set(OSX_BIGSUR True)
-    elseif("${CMAKE_SYSTEM_VERSION}" GREATER "15.6.0" AND "${CMAKE_SYSTEM_VERSION}" LESS "20.0.0")
+    elseif("${CMAKE_SYSTEM_VERSION}" GREATER "14.6.0" AND "${CMAKE_SYSTEM_VERSION}" LESS "20.0.0")
         message("Detected Mac OS X")
         set(OSX True)
     else()
@@ -68,7 +68,18 @@ if(LINUX_OS)
 endif()
 
 set(CMAKE_CXX_STANDARD 11)
-find_package(Eigen3 REQUIRED)
+find_package(Eigen3 QUIET)
+if(NOT EIGEN3_FOUND)
+  # Fallback to cmake_modules
+  find_package(cmake_modules REQUIRED)
+  find_package(Eigen REQUIRED)
+  set(EIGEN3_INCLUDE_DIRS ${EIGEN_INCLUDE_DIRS})
+  set(EIGEN3_LIBRARIES ${EIGEN_LIBRARIES})  # Not strictly necessary as Eigen is head only
+  # Possibly map additional variables to the EIGEN3_ prefix.
+else()
+  set(EIGEN3_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIR})
+endif()
+
 find_package(BLAS REQUIRED)
 find_package(LAPACK REQUIRED)
 find_package(X11)
@@ -84,7 +95,7 @@ if(SUPERLU)
     message("Using SuperLU for Acceleration of Linear System Solving")
 endif()
 
-include_directories(${EIGEN3_INCLUDE_DIR} ./csdp/include)
+include_directories(${EIGEN3_INCLUDE_DIRS} ./csdp/include)
 
 if(OpenCV_FOUND)
     include_directories(${X11_INCLUDE_DIR})
@@ -102,8 +113,10 @@ if(OpenCV_FOUND)
     endif()
 endif()
 
-if(LAPACK_FOUND)
+if(LAPACK_FOUND AND NOT NO_MKL)
     add_definitions(-D EIGEN_USE_BLAS)
+else()
+    message("Disabling MKL and LAPACK")
 endif()
 
 add_definitions(-D BIT64)
