--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     endif()
 endif()
 
-if(${CMAKE_COMPILER_IS_GNUCC} OR ${CMAKE_COMPILER_IS_GNUCXX})
+if(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
     add_definitions(-D COMPILER_GCC)
     set(USE_CLANG False)
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
