Add Powell's dog leg method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,10 @@ message("Compiler version is: ${CMAKE_SYSTEM_VERSION}")
 message("System version is: ${CMAKE_SYSTEM_NAME}")
 message("Architecture is: ${CMAKE_SYSTEM_PROCESSOR}")
 set(NO_OPENMP FALSE)
+if("${CMAKE_BUILD_TYPE}" STREQUAL "")
+    message("No Build Type Specified")
+    set(CMAKE_BUILD_TYPE "Debug")
+endif()
 
 if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     set(CMAKE_CXX_COMPILER clang++)
@@ -24,16 +28,16 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
 
     if(OSX_BIGSUR)
         add_definitions(-D OSX_BIG_SUR)
-	set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread")
+	    set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
+	    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread -g")
     elseif(OSX_10_9)
         add_definitions(-D NO_OMP)
         add_definitions(-D OSX_10_9)
         set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -stdlib=libc++")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -stdlib=libc++ -g")
         message("Operating system is Mac OS X 10.9 or below, disabling OpenMP")
     else()
-        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread -g")
     endif()
 endif()
 
@@ -52,9 +56,9 @@ endif()
 
 if(LINUX_OS)
     if(NOT USE_CLANG)
-    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz")
+    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz -g")
     else()
-    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz")
+    	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Xpreprocessor -fopenmp -Ofast -ffast-math -pthread -lpthread -lrt -lm -lz -g")
     endif()
 
     if(NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "armhf" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "aarch64" AND NOT "${CMAKE_SYSTEM_PROCESSOR}" STREQUAL "arm64")
@@ -233,6 +237,7 @@ set(incs
         solver_WQ_helper.h
         CVLib.h
         CovEstimation.h)
+include_directories(fsolve_wrapper)
 
 add_executable(LibQPEP-test main.cpp)
 add_library (LibQPEP SHARED ${srcs})
