--- a/.github/workflows/linux-x64-cpu-gcc.yml
+++ b/.github/workflows/linux-x64-cpu-gcc.yml
@@ -29,7 +29,7 @@ jobs:
         run: sudo apt-get update
                 
       - name: protobuf
-        run: sudo apt-get install libprotobuf-dev protobuf-compiler linopencv-dev
+        run: sudo apt-get install libprotobuf-dev protobuf-compiler libopencv-dev
       
       - name: build
         run: |
