--- a/.github/workflows/linux-x64-cpu-gcc.yml
+++ b/.github/workflows/linux-x64-cpu-gcc.yml
@@ -34,6 +34,15 @@ jobs:
       - name: protobuf
         run: sudo apt-get install libprotobuf-dev protobuf-compiler libopencv-dev
       
+      - name: MKL
+        run: |
+          cd /tmp
+          wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
+          sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
+          sudo sh -c 'echo deb https://apt.repos.intel.com/mkl all main > /etc/apt/sources.list.d/intel-mkl.list'
+          sudo apt-get update
+          apt-get install intel-mkl-64bit-2018.2-046
+      
       - name: build
         run: |
           mkdir build && cd build
