--- a/.github/workflows/linux-x64-cpu-gcc.yml
+++ b/.github/workflows/linux-x64-cpu-gcc.yml
@@ -41,7 +41,7 @@ jobs:
           sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2019.PUB
           sudo sh -c 'echo deb https://apt.repos.intel.com/mkl all main > /etc/apt/sources.list.d/intel-mkl.list'
           sudo apt-get update
-          apt-get install intel-mkl-64bit-2018.2-046
+          sudo apt-get install intel-mkl-64bit-2018.2-046
       
       - name: build
         run: |
